[project]
name = "lab-parallel-python"
version = "0.1.0"
description = "Lab assignment for learning parallel and asynchronous processing in Python"
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.21.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.15.0",
    "notebook>=6.4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["*.py", "*.ipynb", "*.json", "*.md"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true